@@ -1,11 +1,12 @@
 if AUTOTESTS
 
 # build automated 'tests'
-TESTS=test-context test-font-face test-surface
+TESTS=test-context test-font-face test-surface test-scaled-font
 noinst_PROGRAMS = $(TESTS)
 test_context_SOURCES=test-context.cc
 test_font_face_SOURCES=test-font-face.cc
 test_surface_SOURCES=test-surface.cc
+test_scaled_font_SOURCES=test-scaled-font.cc
 
 else
 
